[package]
name = "game_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.20", features = ["full"] }
vek = "0.15"
parking_lot = "*"
muleengine = { path = "muleengine" }
sdl2_opengl_muleengine = { path = "sdl2_opengl_muleengine" }

[workspace]
members = [
	"muleengine",
	"sdl2_opengl_muleengine"
]
