[package]
name = "game_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.20", features = ["full"] }
vek = "0.16"
parking_lot = "*"
muleengine = { path = "muleengine" }
sdl2_opengl_muleengine = { path = "sdl2_opengl_muleengine" }
method-taskifier = { git = "https://github.com/bytifex/method-taskifier.git" }
rapier3d = { version = "0.17", features = ["enhanced-determinism", "wasm-bindgen", "serde-serialize"] }

[workspace]
members = [
	"muleengine",
	"sdl2_opengl_muleengine"
]
