[package]
name = "game_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.20", features = ["full"] }
vek = "0.16"
parking_lot = "*"
rapier3d = { version = "0.18", features = ["enhanced-determinism", "wasm-bindgen", "serde-serialize"] }

muleengine = { path = "muleengine" }
sdl2_opengl_muleengine = { path = "sdl2_opengl_muleengine" }
entity-component = { path = "entity-component" }

method-taskifier = { git = "https://github.com/bytifex/method-taskifier.git" }

[workspace]
members = [
	"muleengine",
	"entity-component",
	"sdl2_opengl_muleengine"
]
