[package]
name = "muleengine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
vek = "0.16"
image = "0.24"
assimp = "0.3.1"
assimp-sys = "0.3.1"
tempfile = "3"
parking_lot = "*"
tokio = { version = "1.20", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }

# todo!("miniz_oxide = "0.7"")
minizip-sys = { git = "https://github.com/bytifex/minizip-sys.git" }
method-taskifier = { git = "https://github.com/bytifex/method-taskifier.git" }
bytifex-utils = { git = "https://github.com/bytifex/bytifex-utils.git" }

[dev-dependencies]
closure = "0.3.0"
env_logger = "0.10"
