[package]
name = "async_worker_fn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = [ "full" ]}
log = "0.4"
parking_lot = "0.12"
async_worker_macros = { path = "async_worker_macros" }
